# resume

./: README.md  main.py  mkdocs.yaml  pyproject.toml
.github/workflows/: ci-docs.yml  ci-release.yml  ci-test.yml  ci.yml
2025/: 404.html  index.html
2025/assets/: custom-template.latex
2025/search/: search_index.json
2025/stylesheets/: extra.css
docs/: README.md  index.md
latest/: 404.html  index.html
