[project]
name = "resume"
version = "2025.3.9"
description = "Resume"
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
[[project.authors]]
name = "Mohamed Martini"
email = "mhdmart1@gmail.com"

[dependency-groups]
docs = [ "mkdocs>=1.6.1", "mkdocs-material>=9.6.5", "mike>=2.1.3", "mkdocstrings>=0.28.1", "shtab>=1.7.1",]
lint = [ "codespell>=2.4.1",]

[project.license]
text = "MIT"

[tool.pdm]
distribution = false
